fix(Slider): layout styles break if parent have alignment (#34)
This fixes the issue where the `bq-slider` styles break when the parent container applies a display or text alignment CSS rule.

--- a/packages/bee-q/src/components/slider/scss/bq-slider.scss
+++ b/packages/bee-q/src/components/slider/scss/bq-slider.scss
@@ -25,11 +25,11 @@
 }
 
 :host {
-  @apply block;
+  @apply block w-full;
 }
 
 .bq-slider {
-  @apply flex h-[calc(var(--bq-slider--thumb-size)_+_var(--bq-slider--size))] w-full items-center;
+  @apply flex h-[calc(var(--bq-slider--thumb-size)_+_var(--bq-slider--size))] w-full items-center text-start;
 }
 
 .bq-slider__container {
